--- a/PlainFIles/PlainFIles.Console/PlainFIles.Console.csproj
+++ b/PlainFIles/PlainFIles.Console/PlainFIles.Console.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PlainFIles\PlainFIles.csproj" />
+    <PackageReference Include="Topshelf" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PlainFIles\PlainFIles.Core.csproj" />
   </ItemGroup>
 
 </Project>
